[tool.poetry]
name = "ai-lsp"
version = "0.1.0"
description = "An LSP for your AI"
authors = ["Logan Walls <2934282+LoganWalls@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pygls = "^1.3.0"
openai = "^1.10.0"
gitpython = "^3.1.41"
tokenizers = "^0.15.1"
transformers = "^4.37.2"
jinja2 = "^3.1.3"
instructor = "^1.2.0"
pydantic = "^2.7.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
ipython = "^8.4.0"
pytest = "^7.1.2"

[tool.ruff.lint]
ignore = ["F722"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
