[project]
name = "ai-lsp"
version = "0.1.0"
description = "A highly scriptable, AI-powered personal language server"
authors = [
  { name = "Logan Walls", email = "2934282+LoganWalls@users.noreply.github.com" },
]
readme = "README.md"

requires-python = ">=3.10"
dependencies = ["pygls>=1.3.0", "gitpython>=3.1.41"]

[project.optional-dependencies]
dev = ["ipdb>=0.13.9", "ipython>=8.4.0", "pytest>=7.1.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
ignore = ["F722"]
